FullQa New/src/objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>ARR_Split_Value__c</fullName>
        <formula>IF(Opportunity.PROS_ARR__c = 0,Opportunity.ARR__c *SplitPercentage,Opportunity.PROS_ARR__c  *  SplitPercentage)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split ARR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Group__c</fullName>
        <description>Used to report split values of opportunities by team</description>
        <formula>TEXT(SplitOwner.Sales_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Sales Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Booked_Value__c</fullName>
        <description>Adjusted Booked Value based on percentage of Split
Integrated: No
Sales Operations - Amy Mosher</description>
        <formula>Opportunity.BookedValue__c  *  SplitPercentage</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Member_Manager__c</fullName>
        <formula>SplitOwner.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <formula>SplitOwner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <description>Used for dashboard reporting to show team and manager name on in one column</description>
        <formula>Text(SplitOwner.Sales_Group__c) &amp; &quot; - &quot; &amp;  SplitOwner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-8080</description>
        <formula>SplitOwner.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>